--- a/products/templates/index.html
+++ b/products/templates/index.html
@@ -1,20 +1,20 @@
 {% extends 'base.html' %}
 {% block content %}
-    <h1>Products</h1>
-    <div class="row">
+  <h1>Products</h1>
+  <div class="row">
     {% for product in products %}
-    <div class="column">
-        <div class="card" style="width: 18rem">
-        <img class="card-img-top" src="{{ product.image_url}}" alt="Card image cap" />
-        <div class="card-body">
+      <div class="col-md-4 mb-4 d-flex">
+        <div class="card w-100 h-100 d-flex flex-column">
+          <div class="card-img-container" style="height: 200px; display: flex; justify-content: center; align-items: center; overflow: hidden; background-color: #f8f9fa;">
+            <img src="{{ product.image_url }}" class="card-img-top" alt="{{ product.name }}" style="max-height: 100%; width: auto; object-fit: contain;">
+          </div>
+          <div class="card-body d-flex flex-column">
             <h5 class="card-title">{{ product.name }}</h5>
-            <p class="card-text">
-                ₹{{ product.price }}
-            </p>
-            <a href="#" class="btn btn-primary">Add to Cart</a>
+            <p class="card-text">₹{{ product.price }}</p>
+            <a href="{% url 'add_to_cart' product.id %}" class="btn btn-primary mt-auto">Add to Cart</a>
+          </div>
         </div>
-        </div>
-    </div>
+      </div>
     {% endfor %}
-    </div>
+  </div>
 {% endblock %}
