--- a/templates/base.html
+++ b/templates/base.html
@@ -16,20 +16,43 @@
       crossorigin="anonymous"
     />
 
-    <title>Hello, world!</title>
+    <title>StoreFront</title>
   </head>
-  <nav class="navbar navbar-light bg-light">
-    <a class="navbar-brand" href="#">StoreFront</a>
-  </nav>
 
   <body>
-    <div class="container">
-       {% block content %} 
-       {% endblock %}
-    </div>
-   
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light mb-4">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="/">Storefront</a>
+        <div class="d-flex">
+          {% if user.is_authenticated %}
+          <span class="navbar-text me-3">Welcome, {{ user.username }}</span>
+          <a class="btn btn-outline-info me-2" href="{% url 'view_cart' %}"
+            >Cart</a
+          >
+
+          <form
+            method="post"
+            action="{% url 'logout' %}"
+            style="display: inline"
+          >
+            {% csrf_token %}
+            <button class="btn btn-outline-danger" type="submit">Logout</button>
+          </form>
+
+          {% else %}
+          <a class="btn btn-outline-primary me-2" href="{% url 'login' %}"
+            >Login</a
+          >
+          <a class="btn btn-primary" href="{% url 'register' %}">Register</a>
+          {% endif %}
+        </div>
+      </div>
+    </nav>
+
+    <!-- Page-specific content goes here -->
+    <div class="container">{% block content %} {% endblock %}</div>
+
+    <!-- Scripts -->
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
       integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
